[package]
name = "xochron"
version = "0.1.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
edition = "2018"

categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "nrf52", "hal", "nrf52832"]
license = "GPL-3.0"
readme = "README.md"
description = "A embedded-hal and rtfm powered PineTime firmware"
repository = "https://github.com/wose/xochron"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
embedded-graphics = "0.5.1"
embedded-hal = "0.2.3"
st7735-lcd = "0.6.3"
panic-semihosting = "0.5.3"

[dependencies.nrf52832-hal]
version = "0.8.1"
default-features = false
features = ["xxAA-package", "rt"]

[[bin]]
name = "xochron"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
