[package]
name = "xochron-ui"
version = "0.1.0"
authors = ["Sebastian Woetzel <wose@zuendmasse.de>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/wose/xochron"

[dependencies]
chrono = { version = "0.4.11", default-features = false }
heapless = "0.5.3"
ufmt = "0.1.0"
ufmt-utils = "0.1.1"

[dependencies.embedded-graphics]
version = "0.6.0-beta.2"
